# article_validator

./: .gitignore  app.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 18b339dffa5d_create_relationship_role_entity_in_user_.py  4fa4c2fe7743_initial.py  a77a79d3400c_create_role_entity.py  b3c2a1d4f5e6_create_refresh_token_table.py
docs/: alembic.md
src/config/: jwt_config.py  logger.py  settings.py
src/exceptions/: __init__.py  base_exception.py
src/exceptions/auth/: auth_exceptions.py
src/exceptions/roles/: role_exceptions.py
src/exceptions/token/: token_exceptions.py
src/exceptions/users/: user_exceptions.py
src/models/: refresh_token.py  role.py  user.py
src/models/base/: base_model.py
src/routes/: __init__.py  auth_routes.py  role_routes.py  user_routes.py
src/schemas/: base.py
src/schemas/auth/: access_token_response_schema.py  login_schema.py
src/schemas/role/: role_create_schema.py  role_read_schema.py  role_response_schema.py  role_update_schema.py
src/schemas/user/: user_create_schema.py  user_read_schema.py  user_response_schema.py  user_update_schema.py
src/services/: auth_service.py  role_service.py  token_service.py  user_service.py
src/utils/: cpf_validator.py  exception_handlers.py  jwt_utils.py  password.py  permissions.py
